projects/keycodechecker/style.css
@media (prefers-color-scheme: dark) {
  :root {
    --my-font-fg: black;
    --my-font-family: "Roboto", "Helvetica", "Arial", sans-serif;
  }
  html {
    content: "dark";
  }
}

@media (prefers-color-scheme: light) {
  :root {
    --my-font-fg: white;
    --my-font-family: "Roboto", "Helvetica", "Arial", sans-serif;
  }
  html {
    content: "light";
  }
}

body {
  padding: 1%;
}

a:link {
  text-decoration: none;
  color: inherit;
}

.gitlink {
  font-family: var(--my-font-family);
  font-size: 0.85em;
  color: var(--my-font-fg);
  right: 2px;
  top: 2px;
  padding: 2px;
  text-align: right;
  position: fixed;
  background-color: white;
  border: 2px solid black;
  opacity: 0.3;
  transition: opacity 0.1s ease-in-out;
}

.gitlink:hover {
  opacity: 1;
}

.main {
  font-size: 11vw;
  font-family: var(--my-font-family);
  font-weight: 700;
  text-align: left;
}

.linkbtn {
  text-align: center;
  font-size: 6vw;
  transition: all 0.15s ease-in-out;
  border-radius: 10px;
}

.linkbtn:hover {
  transform: scale(0.95);
}

.bounced {
  transition: all 0.07s ease-in-out;
}

.forkme {
  color: transparent;
  right: 0px;
  top: 0px;
  position: fixed;
  opacity: 0.2;
  transition: opacity 0.1s ease-in-out;
}

#modifierTable {
  table-layout: fixed;
  column-width: 22%;
  width: 100%;
  font-family: var(--my-font-family);
  font-size: 4vw;
}

.forkme:hover {
  opacity: 1.0;
}

